# Emotion-aware-LLM-scheduling

./: .gitignore  README.md  pyproject.toml  run_experiments.sh  run_experiments_fixed.sh  run_experiments_time-window.sh  run_project.sh  run_simulation.py  test_plan_b.py
Exp5/: AW-SSJF_80jobs_load0.50_fixed_jobs.csv  Untitled0.ipynb
Exp5/exp5_out/: exp5_report.json  exp5_summary.csv
analysis/: README.md  aggregate_results.py  experiment_plots.py  generate_hero_figure.py  plot_emotion_results.py  plot_publication.py
experiments/: __init__.py  defense_experiments.py  exp0_latency_decomposition.py  exp1_k_sweep.py  exp2_load_sweep.py  exp3_gamma_sweep.py  exp4_online_control.py  exp5_queueing_model.py  exp6_multi_seed.py  exp7_burst_traffic.py  exp8_load_sweep_timewindow.py
model-serving/: __init__.py  simulator.py
scripts/: generate_unified_trace.py  run_defense_experiments.sh  run_exp1_k_sweep.sh  run_exp2_load_sweep.sh  run_exp3_gamma_sweep.sh  run_exp4_online.sh  run_exp5_queueing.sh  run_exp6_multiseed.sh  run_exp7_burst.sh  run_exp8_load_sweep_timewindow.sh  run_experiments_fixed.sh  run_experiments_time-window.sh  run_multi_seed.sh  run_param_sweep.sh  run_queueing_validation.sh  run_robustness_experiment.sh  run_shuffle_experiment.sh  run_starvation_sweep.sh
slurm/: run_fixed_jobs.slurm  run_multi_seed.slurm  run_param_sweep.slurm  run_queueing_validation.slurm  run_robustness.slurm  run_shuffle_experiment.slurm  run_starvation_sweep.slurm  run_time_window.slurm
tools/: README.md  emotion_vad_values.csv  extract_emotion_vad.py
(+1140 files in other folders)
